<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="options"
            type="com.appexecutors.piceditor.EditOptions" />
        <variable
            name="fragment"
            type="com.appexecutors.piceditor.PicEditorFragment" />
        <variable
            name="mode"
            type="Integer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        tools:context=".PicEditorFragment">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorBlack70"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_view_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> fragment.onBackPress()}"
                android:src="@drawable/ic_arrow_back_black"
                style="@style/EditorImage"
                android:contentDescription="@string/content_description_editor_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_view_back"
                android:layout_marginStart="8dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_view_undo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_undo_black"
                    style="@style/EditorImage"
                    android:onClick="@{()-> fragment.undoRedo(1)}"
                    android:contentDescription="@string/content_description_editor_undo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_view_back"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image_view_redo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_redo_black"
                    style="@style/EditorImage"
                    android:onClick="@{()-> fragment.undoRedo(2)}"
                    android:contentDescription="@string/content_description_editor_redo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_view_undo"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <ImageView
                android:id="@+id/image_view_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_black"
                style="@style/EditorImage"
                android:contentDescription="@string/content_description_editor_delete"
                android:onClick="@{() -> fragment.deleteImage()}"
                android:visibility="@{options.showDeleteOption ? View.VISIBLE: View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/image_view_crop_rotate"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_view_crop_rotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_crop_rotate_black"
                style="@style/EditorImage"
                android:contentDescription="@string/content_description_editor_crop"
                android:onClick="@{() -> fragment.cropImage()}"
                android:visibility="@{options.showCropOption ? View.VISIBLE: View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/image_view_text"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_view_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_text_black"
                style="@style/EditorImage"
                android:contentDescription="@string/content_description_editor_text"
                android:visibility="@{options.showTextOption ? View.VISIBLE: View.GONE}"
                android:onClick="@{() -> fragment.addTextOver()}"
                android:labelFor="@+id/edit_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/image_view_draw"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_view_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mode_edit_black"
                style="@style/EditorImage"
                android:contentDescription="@string/content_description_editor_draw"
                android:visibility="@{options.showDrawOption ? View.VISIBLE: View.GONE}"
                android:onClick="@{() -> fragment.startBrush()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/recycler_view_media">

            <EditText
                android:id="@+id/edit_text_caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/str_add_caption"
                android:autofillHints="null"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="3"
                android:minHeight="40dp"
                android:paddingStart="16dp"
                android:paddingEnd="68dp"
                android:background="@drawable/background_black_alpha"
                android:visibility="@{options.showCaption? View.VISIBLE: View.GONE}"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/view_anchor"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintBottom_toTopOf="@+id/edit_text_caption" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_select"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:elevation="4dp"
                android:src="@drawable/ic_check_black"
                app:borderWidth="0dp"
                app:fabCustomSize="48dp"
                android:onClick="@{()-> fragment.editDone()}"
                app:layout_constraintBottom_toBottomOf="@+id/view_anchor"
                app:layout_constraintEnd_toEndOf="@+id/view_anchor"
                app:layout_constraintTop_toTopOf="@+id/view_anchor"
                app:maxImageSize="20dp"
                app:tint="@color/colorWhite" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_media"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:background="@drawable/background_black_alpha"
            android:visibility="@{options.showThumbnail ? View.VISIBLE: View.GONE}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_text"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/constraint_layout_toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:background="@color/colorBlack70"
            android:layout_height="0dp">

            <EditText
                android:id="@+id/edit_text"
                android:paddingTop="32dp"
                style="@style/TextEditorEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center|top"
                android:textColor="@color/colorWhite"
                android:inputType="textMultiLine"
                android:textSize="40sp"
                android:autofillHints="" />

            <TextView
                android:id="@+id/add_text_done_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/background_transparent_white_border"
                android:padding="10dp"
                android:text="@string/str_done"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:onClick="@{() -> fragment.textDone()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.github.veritas1.verticalslidecolorpicker.VerticalSlideColorPicker
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraint_layout_toolbar"
            android:id="@+id/color_picker"
            android:layout_marginTop="4dp"
            android:visibility="gone"
            android:layout_marginEnd="16dp"
            android:layout_width="20dp"
            android:layout_height="256dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>